2007-08-24  Marek Safar  <marek.safar@gmail.com>

	* System.Data.Linq.dll.sources: Some Beta 2 updates.
	
	* Makefile: Build as 3.5 assembly.
	
2007-08-12  Marek Safar  <marek.safar@gmail.com>

	* System.Data.Linq.dll.sources: Added missing files.
	
2007-03-24  Marek Safar  <marek.safar@gmail.com>

	* Initial commit