@@ -1,3 +1,7 @@
+2008-03-03  Marek Safar  <marek.safar@gmail.com>
+
+	* Makefile: Build as 3.5 assembly using 2.0 profile.
+
 2007-08-24  Marek Safar  <marek.safar@gmail.com>
 
 	* System.Data.Linq.dll.sources: Some Beta 2 updates.
@@ -11,3 +15,4 @@
 2007-03-24  Marek Safar  <marek.safar@gmail.com>
 
 	* Initial commit
+
